# tts-tester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  release.yml  transifex-sync.yml
.tx/: config
data/: se.danielnylander.tts-tester.desktop
data/man/: tts-tester.1
po/: README.md  sv.po  tts-tester.pot
src/tts_tester/: __main__.py  engines.py  main.py  settings.py
